[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mathematics = { git = "https://github.com/Anthony-dev570/mathematics.git" }
lazy = { git = "https://github.com/Anthony-dev570/lazy.git" }
paste = "*"
gl = "*"
maplit = "*"
freetype-rs = { version = "*", features = ["bundled"] }
image = "0.24.0"
aftermath = "*"
bumpalo = "*"